[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/02_scenes/03_Locations/01_Helper_Scenes/Dungeon.tres" type="TileSet" id=1]
[ext_resource path="res://src/02_scenes/03_Locations/02_Dungeon_Scenes/02_Rooms/Room.gd" type="Script" id=2]

[node name="Room" type="TileMap"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_mask = 14
format = 1
script = ExtResource( 2 )

[node name="Corridors" type="Node2D" parent="."]

[node name="TopCorridor" type="Position2D" parent="Corridors"]

[node name="BottomCorridor" type="Position2D" parent="Corridors"]

[node name="LeftCorridor" type="Position2D" parent="Corridors"]

[node name="RightCorridor" type="Position2D" parent="Corridors"]
